wireframe/orthographic/front/side/topview crash 2.8 #58950

Closed
opened 2018-12-07 16:26:13 +01:00 by BINJO · 11 comments

System Information
Operating system: Windows 10
Graphics card: gtx 1060 3gb

Blender Version
Broken: 2.8, blender-2.80-c1f6ecdfabf-win64
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

blender crashes when in wireframe, front/side/topview and orthographic at the same time

Exact steps for others to reproduce the error

Go ino wireframe, go into front/side/topview and toggle orthographic.

Based on the default startup or an attached .blend file (as simple as possible).BlenderBug.blend

I updated my Nvidia drivers to the current release and my Blender version was downloaded today.

Here's a Google drive Link to a video I made of the bug:

https://drive.google.com/file/d/192nEJAOfZkAYhrjNYuyxFnQ91gXZDv-H/view?usp=drivesdk

**System Information** Operating system: Windows 10 Graphics card: gtx 1060 3gb **Blender Version** Broken: 2.8, blender-2.80-c1f6ecdfabf-win64 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** blender crashes when in wireframe, front/side/topview and orthographic at the same time **Exact steps for others to reproduce the error** Go ino wireframe, go into front/side/topview and toggle orthographic. Based on the default startup or an attached .blend file (as simple as possible).[BlenderBug.blend](https://archive.blender.org/developer/F5871750/BlenderBug.blend) I updated my Nvidia drivers to the current release and my Blender version was downloaded today. Here's a Google drive Link to a video I made of the bug: https://drive.google.com/file/d/192nEJAOfZkAYhrjNYuyxFnQ91gXZDv-H/view?usp=drivesdk
Author

Added subscriber: @Khamper

Added subscriber: @Khamper

#59180 was marked as duplicate of this issue

#59180 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this error. Can you try updating to the latest blender beta and additionally updating your GPU drivers to the latest version.

If none of these help, we can go from there.

I can not reproduce this error. Can you try updating to the latest blender beta and additionally updating your GPU drivers to the latest version. If none of these help, we can go from there.
Clément Foucault was assigned by Sebastian Parborg 2018-12-07 20:11:15 +01:00

Can you post the output if you run blender with --debug-gpu
Additionally, can you try if --debug-gpu-force-workarounds makes any difference?

Can you post the output if you run blender with --debug-gpu Additionally, can you try if --debug-gpu-force-workarounds makes any difference?
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

I just got the same bug, here is a super simple file that crashes consistently when you press 3 for left view on 6a5e809697 win64

If you apply rotation on the object it will not crash anymore.

Crash_Wireframe.blend

I just got the same bug, here is a super simple file that crashes consistently when you press 3 for left view on 6a5e8096973 win64 If you apply rotation on the object it will not crash anymore. [Crash_Wireframe.blend](https://archive.blender.org/developer/F5875775/Crash_Wireframe.blend)
Author

In #58950#572990, @ZedDB wrote:
Can you post the output if you run blender with --debug-gpu
Additionally, can you try if --debug-gpu-force-workarounds makes any difference?

I wasnt shure how to run it on debug mode, since im not a developer, but I googled and tried it. Not shure if it is what you wanted.
It would open the all gray starting window but not actually run blender.

C:\WINDOWS\system32>start /b "" "C:\Program Files\Blender Foundation\Blender 2.8\blender.exe" --debug-gpu

C:\WINDOWS\system32>Read prefs: C:\Users\Admin\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend
Using OpenGL 4.3 debug facilities
GL application marker: Successfully hooked OpenGL debug callback.
found bundled python: C:\Program Files\Blender Foundation\Blender 2.8\2.80\python

https://drive.google.com/open?id=1wp5PisQBjIM4w-CWmnIwmvm92uxQes4O

> In #58950#572990, @ZedDB wrote: > Can you post the output if you run blender with --debug-gpu > Additionally, can you try if --debug-gpu-force-workarounds makes any difference? I wasnt shure how to run it on debug mode, since im not a developer, but I googled and tried it. Not shure if it is what you wanted. It would open the all gray starting window but not actually run blender. C:\WINDOWS\system32>start /b "" "C:\Program Files\Blender Foundation\Blender 2.8\blender.exe" --debug-gpu C:\WINDOWS\system32>Read prefs: C:\Users\Admin\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend Using OpenGL 4.3 debug facilities GL application marker: Successfully hooked OpenGL debug callback. found bundled python: C:\Program Files\Blender Foundation\Blender 2.8\2.80\python https://drive.google.com/open?id=1wp5PisQBjIM4w-CWmnIwmvm92uxQes4O

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 64bca2e648

This issue was referenced by 64bca2e6486e7cfcf500f43ec85b63f749dfc85c

Added subscriber: @sandman2077

Added subscriber: @sandman2077
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58950
No description provided.