Fix T58950: wireframe/orthographic/front/side/topview crash 2.8